--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -32,7 +32,7 @@ run:
 
 linters-settings:
   goimports:
-    local-prefixes: "github.com/klueska/kind-with-gpus-examples"
+    local-prefixes: "github.com/NVIDIA/nvkind"
 
 issues:
   include:
