migrate golangci-lint to v2
Signed-off-by: Tariq Ibrahim <tibrahim@nvidia.com>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -12,7 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# please keep this alphabetized
+version: "2"
+run:
+  tests: true
 linters:
   enable:
     - asciicheck
@@ -20,21 +22,30 @@ linters:
     - forcetypeassert
     - gocritic
     - godot
-    - gofmt
-    - goimports
     - misspell
     - revive
-    - stylecheck
-
-run:
-  tests: true
-  timeout: 10m
-
-linters-settings:
-  goimports:
-    local-prefixes: "github.com/NVIDIA/nvkind"
-
-issues:
-  include:
-    - EXC0012  # EXC0012 revive: Annoying issue about not having a comment. The rare codebase has such comments
-    - EXC0014  # EXC0014 revive: Annoying issue about not having a comment. The rare codebase has such comments
+    - staticcheck
+  exclusions:
+    generated: lax
+    presets:
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  settings:
+    goimports:
+      local-prefixes:
+        - github.com/NVIDIA/nvkind
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
